--- a/.eslintrc
+++ b/.eslintrc
@@ -22,7 +22,10 @@
     }
   ],
   "rules": {
-    "prettier/prettier": "error",
+    "prettier/prettier": [
+      "error",
+      { "endOfLine": "auto" }
+    ],
     "react/jsx-filename-extension": [1, {"extensions": [".js", ".jsx"]}],
     "react/state-in-constructor": "off",
     "react/react-in-jsx-scope": "off",
